[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Extensions/VariableStore/Store/Entry/Entry.gd" type="Script" id=1]
[ext_resource path="res://src/Extensions/VariableStore/Store/Entry/PlaceHolder.png" type="Texture" id=2]

[node name="Entry" type="Panel"]
margin_right = 399.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Picture" type="TextureRect" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 399.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 295.0
margin_bottom = 14.0
text = "Extension Name..."

[node name="Description" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 295.0
margin_bottom = 76.0
size_flags_vertical = 3

[node name="Done" type="Label" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 62.0
margin_right = 295.0
margin_bottom = 76.0
text = "Done!!!"
align = 1

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 295.0
margin_bottom = 100.0
text = "Download"

[node name="RequestDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ImageRequest" type="HTTPRequest" parent="."]

[node name="DownloadRequest" type="HTTPRequest" parent="."]

[node name="DoneDelay" type="Timer" parent="."]
wait_time = 2.0

[node name="Error" type="AcceptDialog" parent="."]
margin_right = 242.0
margin_bottom = 84.0

[node name="Text" type="Label" parent="Error"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
align = 1
valign = 1

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="RequestDelay" to="." method="_on_RequestDelay_timeout"]
[connection signal="request_completed" from="ImageRequest" to="." method="_on_ImageRequest_request_completed"]
[connection signal="request_completed" from="DownloadRequest" to="." method="_on_DownloadRequest_request_completed"]
[connection signal="timeout" from="DoneDelay" to="." method="_on_DoneDelay_timeout"]
